--- a/client/src/components/Vinyls.css
+++ b/client/src/components/Vinyls.css
@@ -1,6 +1,6 @@
 .vinyl-grid{
-    width: 80%;
-    padding: 30px;
+    width: 90%;
+    padding: 50px;
     margin: 0 auto;
     flex-wrap: wrap;
     flex-direction: row;
